Webpack and index file updates to pull assets correctly

--- a/vote2/app/src/index.html
+++ b/vote2/app/src/index.html
@@ -4,7 +4,7 @@
 		<title>연습용 html 제작</title>
 		<meta charset="utf-8" /><!--인코딩을 알려주는 태그, 안쓰면 한글이 깨질수도 있다.-->
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /><!--애플이 만든 자사의 모바일 브라우저 뷰포트 크기 조절을 위해 만듬-->
-		<link rel="stylesheet" href="assets/css/main.css" /><!--css는 스타일을 미리 지정해놓고 연동만 시켜 스타일을 적용시키는 것-->
+		<link rel="stylesheet" href="css/main.css" /><!--css는 스타일을 미리 지정해놓고 연동만 시켜 스타일을 적용시키는 것-->
 		<style>
 			table,th,td{
 				border: 3px solid black;
@@ -20,7 +20,7 @@
 
 					<!-- Logo ,좌측에 떠있는 jane doe-->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span><!--span은 공간분할-->
+							<span class="image avatar48"><img src="avatar.jpg" alt="" /></span><!--span은 공간분할-->
 							<h1 id="title">이더리움</h1>
 							<p>블록체인 기반 투표앱</p><!--본문글자 태그-->
 						</div>
@@ -117,13 +117,13 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="pic02.jpg" alt="" /></a>
 										<header>
 											<h3>Ipsum Feugiat</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="pic03.jpg" alt="" /></a>
 										<header>
 											<h3>Rhoncus Semper</h3>
 										</header>
@@ -131,13 +131,13 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="pic04.jpg" alt="" /></a>
 										<header>
 											<h3>Magna Nullam</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Natoque Vitae</h3>
 										</header>
@@ -145,13 +145,13 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="pic06.jpg" alt="" /></a>
 										<header>
 											<h3>Dolor Penatibus</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="pic07.jpg" alt="" /></a>
 										<header>
 											<h3>Orci Convallis</h3>
 										</header>
@@ -170,7 +170,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="pic08.jpg" alt="" /></a>
 
 							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
 							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
@@ -224,13 +224,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="js/jquery.min.js"></script>
+			<script src="js/jquery.scrolly.min.js"></script>
+			<script src="js/jquery.scrollex.min.js"></script>
+			<script src="js/browser.min.js"></script>
+			<script src="js/breakpoints.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
 			<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
 			<script src="index.js"></script>
 
