--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>6조 Dapp 프론트엔드</title>
+ <title>Hello World DApp</title>
  <link href='https://fonts.googleapis.com/css?family=Open Sans:400,700' rel='stylesheet' type='text/css'>
  <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
 </head>
 <body class="container">
- <h1>Dapp 프로토타입</h1>
+ <h1>A Simple Hello World Voting Application</h1>
  <div class="table-responsive">
   <table class="table table-bordered">
    <thead>
     <tr>
-     <th>후보자 목록</th>
-     <th>득표</th>
+     <th>Candidate</th>
+     <th>Votes</th>
     </tr>
    </thead>
    <tbody>
     <tr>
-     <td>후보자1</td>
+     <td>Rama</td>
      <td id="candidate-1"></td>
     </tr>
     <tr>
-     <td>후보자2</td>
+     <td>Nick</td>
      <td id="candidate-2"></td>
     </tr>
     <tr>
-     <td>후보자3</td>
+     <td>Jose</td>
      <td id="candidate-3"></td>
     </tr>
    </tbody>
   </table>
  </div>
  <input type="text" id="candidate" />
- <a href="#" onclick="voteForCandidate()" class="btn btn-primary">투표하기</a>
+ <a href="#" onclick="App.voteForCandidate()" class="btn btn-primary">Vote</a>
+ <h1 id="transaction-test"></h1>
 </body>
 <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.37/dist/web3.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
