--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
  <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
 </head>
 <body class="container">
- <h3 id="roomName"></h3>
+ <h2 id="roomName"></h2>
+ <h1 id="voteDate"></h1>
  <div class="table-responsive">
   <table class="table table-bordered">
    <thead>
@@ -17,23 +18,27 @@
    </thead>
    <tbody>
     <tr>
-     <td>Rama</td>
      <td id="candidate-1"></td>
+     <td id="totalVotes-1"></td>
     </tr>
     <tr>
-     <td>Nick</td>
      <td id="candidate-2"></td>
-    </tr>
+     <td id="totalVotes-2"></td> 
+	</tr>
     <tr>
-     <td>Jose</td>
      <td id="candidate-3"></td>
+     <td id="totalVotes-3"></td>
     </tr>
    </tbody>
   </table>
  </div>
+  <a href="#" onclick="App.createVoteRoom()" class="btn btn-primary">Create</a>
+  <a href="#" onclick="App.loadCandidatesAndVotes()" class="btn btn-primary">Refresh</a>
+  <br>
+  <hr>
  <input type="text" id="candidate" />
  <a href="#" onclick="App.voteForCandidate()" class="btn btn-primary">Vote</a>
- <h1 id="transaction-test"></h1>
+ <h6 id="msg"></h6>
 </body>
 <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.37/dist/web3.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
